@@ -65,7 +65,6 @@ class PlaylistItem : public KListViewItem
         static QString trackName( const KURL &u ) { return u.protocol() == "file" ? u.fileName() : u.prettyURL(); }
 
         const KURL m_url;
-        int m_cachedHeight;
 
         static const uint STRING_STORE_SIZE = 80;
         static QString stringStore[STRING_STORE_SIZE];
